"sprint mission 4"