@@ -5,38 +5,41 @@ import com.sprint.mission.discodeit.repository.MessageRepository;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Repository
 public class JCFMessageRepository implements MessageRepository {
-    Map<UUID, Message> messageMap = new HashMap<>();
+    Map<UUID, Message> store;
+
+    public JCFMessageRepository() {
+        this.store = new HashMap<>();
+    }
 
     @Override
     public Message save(Message message) {
-        messageMap.put(message.getId(), message);
+        store.put(message.getId(), message);
         return message;
     }
 
     @Override
-    public Optional<Message> findByMessageId(UUID messageId) {
-        return Optional.ofNullable(messageMap.get(messageId));  // 메시지 아이디로 메시지 찾기
+    public Optional<Message> findById(UUID id) {
+        return Optional.ofNullable(store.get(id));  // 메시지 아이디로 메시지 찾기
     }
 
     @Override
-    public List<Message> findByChannelId(UUID channelId) {
-        return messageMap.values().stream()
+    public List<Message> findAllByChannelId(UUID channelId) {
+        return store.values().stream()
                 .filter(message -> message.getChannelId().equals(channelId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public void deleteByMessageId(UUID messageId) {
-        messageMap.remove(messageId);
+    public void deleteById(UUID id) {
+        store.remove(id);
     }
 
     @Override
-    public void deleteByChannelId(UUID channelId) {
-        messageMap.values().removeIf(message -> message.getChannelId().equals(channelId));
+    public void deleteAllByChannelId(UUID channelId) {
+        store.values().removeIf(message -> message.getChannelId().equals(channelId));
     }
 
 }
