@@ -1,5 +1,6 @@
 package com.sprint.mission.discodeit.service.basic;
 
+import com.sprint.mission.discodeit.dto.binaryContent.BinaryContentCreateRequest;
 import com.sprint.mission.discodeit.dto.message.MessageCreateRequest;
 import com.sprint.mission.discodeit.dto.message.MessageDto;
 import com.sprint.mission.discodeit.dto.message.MessageUpdateRequest;
@@ -25,60 +26,72 @@ public class BasicMessageService implements MessageService {
     private final ValidateMessage validateMessage;
 
     @Override
-    public MessageDto create(MessageCreateRequest request) {
-        validateMessage.validateMessage(request.message(), request.userId(), request.channelId());
+    public MessageDto create(MessageCreateRequest messageCreateRequest, List<BinaryContentCreateRequest> binaryContentCreateRequests) {
+        //validateMessage.validateMessage(request.message(), request.userId(), request.channelId());
+        UUID channelId = messageCreateRequest.channelId();
+        UUID authorId = messageCreateRequest.authorId();
 
-        Message message = new Message(request.message(), request.userId(), request.channelId(), request.content());
-        messageRepository.save(message);
-        if (request.content() != null) {
-            for (byte[] content : request.content()){
-                BinaryContent binaryContent = new BinaryContent(message.getAuthorId(), message.getId(), content);
-                binaryContentRepository.save(binaryContent);
-            }
-        }
-        return changeToDto(message);
+        List<UUID> attachmentIds = binaryContentCreateRequests.stream()
+                .map(request -> {
+                    String fileName = request.fileName();
+                    String contentType = request.contentType();
+                    byte[] bytes = request.bytes();
+
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long)bytes.length, contentType, bytes);
+                    BinaryContent createdbinaryContent = binaryContentRepository.save(binaryContent);
+                    return  createdbinaryContent.getId();
+                })
+                .toList();
+
+        String content = messageCreateRequest.message();
+        Message message = new Message(content, channelId, authorId, attachmentIds);
+        Message createdMessage = messageRepository.save(message);
+
+        return changeToDto(createdMessage);
+    }
+
+    @Override
+    public MessageDto findById(UUID messageId){
+        return messageRepository.findById(messageId)
+                .map(this::changeToDto)
+                .orElseThrow(() -> new ResourceNotFoundException("Message not found."));
     }
 
     @Override
     public List<MessageDto> findAllByChannelId(UUID channelId) {
-        List<Message> messages = messageRepository.findByChannelId(channelId);
-        return messages.stream()
-                .map(BasicMessageService::changeToDto)
-                .collect(Collectors.toList());
+        return messageRepository.findAllByChannelId(channelId).stream()
+                .map(this::changeToDto)
+                .toList();
     }
 
     @Override
-    public MessageDto update(MessageUpdateRequest request) {
-        validateMessage.validateMessage(request.message(), request.userId(), request.channelId());
-        Message message = messageRepository.findByMessageId(request.messageId())
+    public MessageDto update(UUID messageId, MessageUpdateRequest request) {
+        // validateMessage.validateMessage(request.message(), request.userId(), request.channelId());
+
+        Message message = messageRepository.findById(messageId)
                 .orElseThrow(() -> new ResourceNotFoundException("Message not found."));
 
-        // BinaryContent update
-        binaryContentRepository.deleteByMessageId(request.messageId());
-        if (request.content() != null) {
-            for (byte[] content : request.content()){
-                BinaryContent binaryContent = new BinaryContent(message.getAuthorId(), message.getId(), content);
-                binaryContentRepository.save(binaryContent);
-            }
-        }
-        message.update(request.message(), request.content());
-        messageRepository.save(message);
-        return changeToDto(message);
+        message.update(request.newMessage());
+        Message updatedMessage = messageRepository.save(message);
+        return changeToDto(updatedMessage);
     }
 
     @Override
     public void delete(UUID messageId) {
-        binaryContentRepository.deleteByMessageId(messageId);
-        messageRepository.deleteByMessageId(messageId);
+        Message message = messageRepository.findById(messageId)
+                .orElseThrow(() -> new ResourceNotFoundException("Message not found."));
+        message.getAttachmentIds()
+                .forEach(binaryContentRepository::deleteById);
+        messageRepository.deleteById(messageId);
     }
 
-    private static MessageDto changeToDto(Message message) {
+    private MessageDto changeToDto(Message message) {
         return new MessageDto(
                 message.getId(),
                 message.getAuthorId(),
                 message.getChannelId(),
                 message.getMessage(),
-                message.getContent(),
+                message.getAttachmentIds(),
                 message.getCreatedAt(),
                 message.getUpdatedAt()
         );
