@@ -5,12 +5,16 @@ import com.sprint.mission.discodeit.dto.readStatus.ReadStatusDto;
 import com.sprint.mission.discodeit.dto.readStatus.ReadStatusUpdateRequest;
 import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.exception.notfound.ResourceNotFoundException;
+import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
+import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.validation.ValidateReadStatus;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.Instant;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -18,42 +22,69 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class BasicReadStatusService {
     private final ReadStatusRepository readStatusRepository;
+    private final UserRepository userRepository;
+    private final ChannelRepository channelRepository;
     private final ValidateReadStatus validateReadStatus;
 
     public ReadStatusDto create(ReadStatusCreateRequest request) {
-        validateReadStatus.validateReadStatus(request.channelId(), request.userId());
+        //validateReadStatus.validateReadStatus(request.channelId(), request.userId());
 
-        ReadStatus readStatus = new ReadStatus(request.userId(), request.channelId());
-        readStatusRepository.save(readStatus);
-        return changeToDto(readStatus);
+        UUID userId = request.userId();
+        UUID channelId = request.channelId();
+        Instant lastReadTime = request.lastReadTime();
+
+        if (!userRepository.existsById(userId)) {
+            throw new NoSuchElementException("User with id " + userId + " does not exist");
+        }
+        if (!channelRepository.existsById(channelId)) {
+            throw new NoSuchElementException("Channel with id " + channelId + " does not exist");
+        }
+        if (readStatusRepository.findAllByUserId(userId).stream()
+                .anyMatch(readStatus -> readStatus.getChannelId().equals(channelId))) {
+            throw new IllegalArgumentException("ReadStatus with userId " + userId + " and channelId " + channelId + " already exists");
+        }
+
+        ReadStatus readStatus = new ReadStatus(userId, channelId, lastReadTime);
+        ReadStatus createdReadStatus = readStatusRepository.save(readStatus);
+        return changeToDto(createdReadStatus);
     }
 
     public ReadStatusDto findById(UUID readStatusId) {
-        ReadStatus readStatus = readStatusRepository.findById(readStatusId)
+        return readStatusRepository.findById(readStatusId)
+                .map(this::changeToDto)
                 .orElseThrow(() -> new ResourceNotFoundException("ReadStatus not found."));
-        return changeToDto(readStatus);
     }
 
     public List<ReadStatusDto> findAllByUserId(UUID userId) {
-        List<ReadStatus> readStatuses = readStatusRepository.findAllByUserId(userId);
-        return readStatuses.stream()
-                .map(BasicReadStatusService::changeToDto)
-                .collect(Collectors.toList());
+        return readStatusRepository.findAllByUserId(userId).stream()
+                .map(this::changeToDto)
+                .toList();
     }
 
-    public ReadStatusDto update(ReadStatusUpdateRequest request) {
-        ReadStatus readStatus = readStatusRepository.findByUserIdAndChannelId(request.userId(), request.channelId())
-                .orElseThrow(() -> new ResourceNotFoundException("ReadStatus not found."));
-        readStatus.update(request.lastReadTime());
-        readStatusRepository.save(readStatus);
-        return changeToDto(readStatus);
+    public ReadStatusDto update(UUID readStatusId, ReadStatusUpdateRequest request) {
+        Instant newLastReadTime = request.newLastReadTime();
+        ReadStatus readStatus = readStatusRepository.findById(readStatusId)
+                .orElseThrow(() -> new ResourceNotFoundException("Read status not found."));
+        readStatus.update(newLastReadTime);
+        ReadStatus updatedReadStatus = readStatusRepository.save(readStatus);
+        return changeToDto(updatedReadStatus);
     }
 
     public void delete(UUID readStatusId) {
-        readStatusRepository.delete(readStatusId);
+        if (!readStatusRepository.existsById(readStatusId)){
+            throw new NoSuchElementException("ReadStatus with id " + readStatusId + " not found");
+        }
+        readStatusRepository.deleteById(readStatusId);
     }
 
-    private static ReadStatusDto changeToDto(ReadStatus readStatus) {
-        return new ReadStatusDto(readStatus.getId(), readStatus.getUserId(), readStatus.getChannelId(), readStatus.getLastReadTime(), readStatus.getCreatedAt(), readStatus.getUpdatedAt());
+    private ReadStatusDto changeToDto(ReadStatus readStatus) {
+        return new ReadStatusDto(
+                readStatus.getId(),
+                readStatus.getUserId(),
+                readStatus.getChannelId(),
+                readStatus.getLastReadAt(),
+                readStatus.getCreatedAt(),
+                readStatus.getUpdatedAt()
+        );
     }
 }
