@@ -1,5 +1,6 @@
 package com.sprint.mission.discodeit.service.basic;
 
+import com.sprint.mission.discodeit.dto.binaryContent.BinaryContentCreateRequest;
 import com.sprint.mission.discodeit.dto.user.UserCreateRequest;
 import com.sprint.mission.discodeit.dto.user.UserDto;
 import com.sprint.mission.discodeit.dto.user.UserUpdateRequest;
@@ -17,6 +18,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -29,70 +31,116 @@ public class BasicUserService implements UserService {
     private final ValidateUser validateUser;
 
     @Override
-    public UserDto create(UserCreateRequest request) {
-        validateUser.validateUser(request.username(), request.email(), request.phoneNumber(), request.password());
+    public UserDto create(UserCreateRequest userRequest, Optional<BinaryContentCreateRequest> profileRequest) {
+        // validateUser.validateUser(request.username(), request.email(), request.phoneNumber(), request.password());
 
-        User user = new User(request.username(), request.email(), request.phoneNumber(), request.password());
-        userRepository.save(user);
-        UserStatus userStatus = new UserStatus(user.getUserId(), Instant.now());
-        userStatusRepository.save(userStatus);
-        // profileImage가 있을 경우 binaryContent에 저장
-        if (request.profileImage() != null) {
-            BinaryContent binaryContent = new BinaryContent(user.getUserId(), null, request.profileImage());
-            binaryContentRepository.save(binaryContent);
-        }
+        String username = userRequest.username();
+        String email = userRequest.email();
+        String phoneNumber = userRequest.phoneNumber();
+        String password = userRequest.password();
+
+        UUID nullableProfileId = profileRequest
+                .map(request -> {
+                    String fileName = request.fileName();
+                    String contentType = request.contentType();
+                    byte[] bytes = request.bytes();
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long)bytes.length, contentType, bytes);
+                    return binaryContentRepository.save(binaryContent).getId();
+                })
+                .orElse(null);
+
+        User user = new User(username, email, phoneNumber, password, nullableProfileId);
+        User createdUser = userRepository.save(user);
+
+        Instant now = Instant.now();
+        UserStatus userStatus = new UserStatus(user.getId(), now);
+        Boolean isOnline = userStatusRepository.save(userStatus).isOnline();
+
         // Dto로 반환
-        return changeToDto(user, userStatus.isOnline());
+        return changeToDto(createdUser, isOnline);
     }
 
     @Override
     public UserDto findByUserId(UUID userId) {
-        User user = userRepository.findByUserId(userId)
+        User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found."));
-        boolean isOnline = userStatusRepository.findByUserId(user.getUserId())
+        Boolean isOnline = userStatusRepository.findByUserId(userId)
                 .map(UserStatus::isOnline)
-                .orElseThrow(() -> new ResourceNotFoundException("UserStatus not found."));
+                .orElseThrow(() -> new ResourceNotFoundException("User status not found."));
         return changeToDto(user, isOnline);
     }
 
     @Override
     public List<UserDto> findAll() {
-        List<User> users = userRepository.findAll();
-        return users.stream()
-                .map(user -> changeToDto(user, userStatusRepository.findByUserId(user.getUserId())
-                        .map(UserStatus::isOnline)
-                        .orElseThrow(() -> new ResourceNotFoundException("User status not found."))))
-                .collect(Collectors.toList());
+        return userRepository.findAll().stream()
+                .map(user -> {
+                    Boolean isOnline = userStatusRepository.findByUserId(user.getId())
+                            .map(UserStatus::isOnline)
+                            .orElseThrow(() -> new ResourceNotFoundException("User status not found."));
+                    return changeToDto(user, isOnline);
+                })
+                .toList();
     }
 
     @Override
-    public UserDto update(UserUpdateRequest request) {
-        validateUser.validateUser(request.username(), request.email(), request.phoneNumber(), request.password());
+    public UserDto update(UUID userId, UserUpdateRequest userRequest, Optional<BinaryContentCreateRequest> profileRequest) {
+        // validateUser.validateUser(request.username(), request.email(), request.phoneNumber(), request.password());
 
-        User user = userRepository.findByUserId(request.userId())
+        User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found."));
-        user.update(request.username(), request.email(), request.phoneNumber(), request.password());
-        if (request.profileImage() != null) {
-            binaryContentRepository.findProfileByUserId(user.getUserId())
-                    .ifPresent(binaryContent -> binaryContentRepository.deleteByContentId(binaryContent.getUserId()));
-            BinaryContent binaryContent = new BinaryContent(user.getUserId(), null, request.profileImage());
-            binaryContentRepository.save(binaryContent);
-        }
 
-        boolean isOnline = userStatusRepository.findByUserId(user.getUserId())
-                .map(UserStatus::isOnline)
-                .orElseThrow(() -> new ResourceNotFoundException("UserStatus not found."));
-        return changeToDto(user, isOnline);
+        String newUsername = userRequest.newUsername();
+        String newEmail = userRequest.newEmail();
+        String newPhoneNumber = userRequest.newPhoneNumber();
+        String newPassword = userRequest.newPassword();
+
+        UUID nullableProfileId = profileRequest
+                .map(request -> {
+                    if (user.getProfileId() != null){
+                        binaryContentRepository.deleteById(user.getProfileId());
+                    }
+
+                    String fileName = request.fileName();
+                    String contentType = request.contentType();
+                    byte[] bytes = request.bytes();
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long)bytes.length, contentType, bytes);
+                    return binaryContentRepository.save(binaryContent).getId();
+                })
+                .orElse(null);
+
+        user.update(newUsername, newEmail, newPhoneNumber, newPassword, nullableProfileId);
+        User createdUser = userRepository.save(user);
+
+        Instant now = Instant.now();
+        UserStatus userStatus = userStatusRepository.findByUserId(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User Status not found."));
+        userStatus.update(now);
+        Boolean isOnline = userStatusRepository.save(userStatus).isOnline();
+
+        // Dto로 반환
+        return changeToDto(createdUser, isOnline);
     }
 
     @Override
     public void delete(UUID userId) {
-        binaryContentRepository.deleteByUserId(userId);
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found."));
+        if (user.getProfileId() != null){
+            binaryContentRepository.deleteById(user.getProfileId());
+        }
         userStatusRepository.deleteByUserId(userId);
-        userRepository.delete(userId);
+        userRepository.deleteById(userId);
     }
 
     private UserDto changeToDto(User user, boolean isOnline) {
-        return new UserDto(user.getUserId(), user.getUsername(), user.getEmail(), user.getPhoneNumber(), isOnline, user.getCreatedAt(), user.getUpdatedAt());
+        return new UserDto(
+                user.getId(),
+                user.getUsername(),
+                user.getEmail(),
+                user.getPhoneNumber(),
+                user.getProfileId(),
+                isOnline,
+                user.getCreatedAt(),
+                user.getUpdatedAt());
     }
 }
